Removed JS processing. Updated deps and .gitignore.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "esbuild-plugin-swc",
-  "version": "1.0.1",
-  "description": "Esbuild plugin for using swc",
+  "version": "2.0.0",
+  "description": "ESBuild plugin for using SWC",
   "main": "dist/index.js",
   "scripts": {
     "start": "tsc -w",
@@ -10,14 +10,14 @@
   "files": ["dist"],
   "keywords": ["esbuild", "swc", "frontend"],
   "author": "sanyuan0704",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@types/node": "^16.11.7",
-    "esbuild": "^0.13.14",
-    "typescript": "^4.4.4"
+    "@types/node": "^18.13.0",
+    "esbuild": "0.16.3",
+    "typescript": "^5.0.4"
   },
   "dependencies": {
-    "@swc/core": "^1.2.108",
-    "deepmerge": "^4.2.2"
+    "@swc/core": "1.3.38",
+    "deepmerge": "^4.3.1"
   }
 }
