Silently handle errors and log them so that it doesn't crash esbuild process

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "ESBuild plugin for using SWC",
   "main": "dist/index.js",
   "scripts": {
-    "start": "tsc -w",
+    "build:watch": "tsc -w",
     "build": "tsc"
   },
   "files": ["dist"],
