--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esbuild-plugin-swc",
-  "version": "2.0.0",
+  "version": "1.0.0",
   "description": "ESBuild plugin for using SWC",
   "main": "dist/index.js",
   "scripts": {
@@ -9,7 +9,7 @@
   },
   "files": ["dist"],
   "keywords": ["esbuild", "swc", "frontend"],
-  "author": "sanyuan0704",
+  "author": "ryan.oconnor@fullscript.com",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.13.0",
